--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=4000
+PORT=https://09-calendar-backend.vercel.app/
 DB_CNN=mongodb+srv://mern_user:yZ20C2nU0yVA4tNQ@calendardb.bhx5aa1.mongodb.net/mern_calendar
 SECRET_JWT_SEED=Este-es-Un4-Pal4br4-s3cr3ta
